src/test/ui/parser/keyword-final.stderr
error: expected pattern, found reserved keyword `final`
  --> $DIR/keyword-final.rs:14:9
   |
LL |     let final = (); //~ ERROR expected pattern, found reserved keyword `final`
   |         ^^^^^ expected pattern

error: aborting due to previous error

